# PowerServe

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md  powerserve  pyproject.toml  requirements.txt
.gitlab/: common.sh  deploy_spec_to_local_phone.sh  deploy_spec_to_remote_phone.sh  ecmd.sh  test-decode.sh  test-mmlu.sh  test-mmmu.sh  test-ppl.sh  test-speculative.sh
app/: CMakeLists.txt
app/common/: CMakeLists.txt  cmdline.cpp  cmdline.hpp
app/perplexity/: CMakeLists.txt  main.cpp
app/run/: CMakeLists.txt  README.md  run.cpp
app/server/: CMakeLists.txt  README.md  local_server.cpp  local_server.hpp  openai_api.hpp  server.cpp  server_handler.hpp  simple_server.cpp  simple_server.hpp
assets/calibration_data/: service_lab_intro_qwen2.txt  strawberry_qwen2.txt
assets/prompts/: comparison_llama.txt  comparison_qwen2.txt  gsm8k1.txt  gsm8k1_llama.txt  gsm8k1_qwen.txt  gsm8k2.txt  gsm8k2_qwen.txt  long.txt  long_prompt.txt  short_prompt.txt  strawberry_qwen2.txt
assets/system_prompts/: llama3.txt  qwen2.txt
docs/: end_to_end.md  export_smallthinker.md  perfetto_tracing.md
libs/: CMakeLists.txt
libs/ggml/: CMakeLists.txt  README.md
libs/ggml/include/: ggml-alloc.h  ggml-backend.h  ggml-blas.h  ggml-cann.h  ggml-cuda.h  ggml-kompute.h  ggml-metal.h  ggml-rpc.h  ggml-sycl.h  ggml-vulkan.h  ggml.h
libs/ggml/src/: CMakeLists.txt  ggml-aarch64.c  ggml-aarch64.h  ggml-alloc.c  ggml-backend-impl.h  ggml-backend.c  ggml-blas.cpp  ggml-cann.cpp  ggml-common.h  ggml-cpu-impl.h  ggml-impl.h  ggml-kompute.cpp  ggml-quants.c  ggml-quants.h  ggml-rpc.cpp  ggml-sycl.cpp  ggml-vulkan.cpp  ggml.c
libs/ggml/src/ggml-cann/: acl_tensor.cpp  acl_tensor.h  aclnn_ops.cpp  aclnn_ops.h  common.h
libs/ggml/src/ggml-cann/kernels/: ascendc_kernels.h  dup.cpp  get_row_f16.cpp  get_row_f32.cpp  get_row_q4_0.cpp  get_row_q8_0.cpp  quantize_f16_q8_0.cpp  quantize_f32_q8_0.cpp  quantize_float_to_q4_0.cpp
libs/ggml/src/ggml-cuda/template-instances/: generate_cu_files.py
libs/ggml/src/ggml-cuda/vendors/: cuda.h  hip.h  musa.h
libs/ggml/src/ggml-sycl/: backend.hpp  common.cpp  common.hpp  concat.cpp  concat.hpp  conv.cpp  conv.hpp  convert.cpp  convert.hpp  dequantize.hpp  dmmv.cpp  dmmv.hpp  gemm.hpp  im2col.cpp  im2col.hpp  mmq.cpp  mmq.hpp  mmvq.cpp  mmvq.hpp  norm.cpp  norm.hpp  presets.hpp  rope.cpp  rope.hpp  softmax.cpp  softmax.hpp  tsembd.cpp  tsembd.hpp  vecdotq.hpp
libs/ggml/src/ggml-sycl/dpct/: helper.hpp
libs/ggml/src/llamafile/: sgemm.cpp  sgemm.h
libs/ggml/src/vulkan-shaders/: vulkan-shaders-gen.cpp
libs/llama_tokenizer/: CMakeLists.txt  llama-vocab.cpp  llama-vocab.h  unicode-data.cpp  unicode-data.h  unicode.cpp  unicode.h
libs/qnn_headers/: CMakeLists.txt  qnn_type_macros.hpp
libs/stb_headers/: CMakeLists.txt
src/: CMakeLists.txt
src/backend/: CMakeLists.txt  backend.hpp  cpu_buffer.hpp  platform.cpp  platform.hpp
src/backend/ggml/: CMakeLists.txt  ggml.cpp  ggml.hpp  ggml_kv_cache.cpp  ggml_kv_cache.hpp  ggml_wrapper.cpp
src/backend/qnn/: CMakeLists.txt  causal_models.cpp  causal_models.hpp  config.hpp  graph_interface.cpp  graph_interface.hpp  qnn.cpp  qnn.hpp  qnn_backend.cpp  qnn_backend.hpp
src/core/: CMakeLists.txt  android_logger.hpp  buffer.hpp  config.cpp  config.hpp  data_type.hpp  defines.hpp  exception.hpp  getenv.hpp  kv_cache.hpp  logger.hpp  perf.cpp  perf.hpp  perfetto_trace.cpp  perfetto_trace.hpp  spin_barrier.cpp  spin_barrier.h  spin_barrier.hpp  tensor.hpp  thread_pool.cpp  thread_pool.hpp  timer.cpp  timer.hpp  typedefs.hpp
src/executor/: CMakeLists.txt  executor.cpp  executor.hpp
src/graph/: CMakeLists.txt  graph.cpp  graph.hpp  node.cpp  node.hpp  op_params.hpp  op_type.hpp
src/model/: CMakeLists.txt  model.hpp  model_loader.cpp  model_loader.hpp
src/model/common/: weights.hpp
src/model/internvl/: CMakeLists.txt  internvl_model.cpp  internvl_model.hpp  internvl_weight.hpp  process_image_internvl2.hpp
src/model/llama/: CMakeLists.txt  llama_model.cpp  llama_model.hpp  llama_weight.hpp
src/model/module/: CMakeLists.txt  attention.hpp  attention_mask.cpp  attention_mask.hpp  ffn.cpp  ffn.hpp  norm_attention.cpp  norm_attention.hpp
src/model/qwen2/: CMakeLists.txt  qwen2_model.cpp  qwen2_model.hpp  qwen2_weight.hpp
src/sampler/: CMakeLists.txt  prob_array.cpp  prob_array.hpp  sampler.cpp  sampler.hpp  sampler_chain.cpp  sampler_chain.hpp
src/speculative/: CMakeLists.txt  spec_model.hpp  speculative_config.hpp  token_tree.cpp  token_tree.hpp
src/storage/: CMakeLists.txt  file.hpp  file_loader.cpp  file_loader.hpp
src/storage/file_loader/: file_loader_bio.hpp  file_loader_dio.hpp  file_loader_mmap.hpp  file_loader_uv.hpp
src/tokenizer/: CMakeLists.txt  tokenizer.cpp  tokenizer.hpp
tests/: CMakeLists.txt  qnn_test.cpp  quant_mul_mat.cpp
tools/: CMakeLists.txt  add_license.py  cos_sim.py  format.py  gen_flame_graph.sh  gguf_export.py
tools/convert_hf_to_gguf/: convert_hf_to_gguf.py  llama-quantize-x86_64-linux-clang  requirements.txt
tools/convert_hf_to_gguf/gguf-py/examples/: reader.py  writer.py
tools/convert_hf_to_gguf/gguf-py/gguf/: constants.py  gguf.py  gguf_reader.py  gguf_writer.py  lazy.py  metadata.py  quants.py  tensor_mapping.py  utility.py  vocab.py
tools/end_to_end/: compile.sh  deploy_to_phone.sh  powerserve.py  powerserve.sh
tools/extract_embd_from_vl/: README.md  main.py
tools/gguf_config_to_json/: CMakeLists.txt  main.cpp
tools/mmlu/: .gitignore  README.md  mmlu_test.py
tools/mmmu_test/: mmmu_test.py
tools/parameter_search/token_tree/: .gitignore  README.md  analyze.py  common.py  search.py
tools/parameter_search/token_tree_on_host/: main.py
tools/qnn_converter/: .gitignore  README.md  build_all_layers.py  build_shared_object.py  converter.py  export_to_onnx.py  fake_quantize.py  generate_binary.py  graph_params.py  llama_model.py  model_params.py  requirements.txt  soc_config.py
tools/qnn_converter/prompt/: lab_intro_qwen.md
tools/simple_qnn_test/: .gitignore  README.md  simple_convert_qnn.py
(+8 files in other folders)
